<resources>
    <string name="app_name">2004ProjectTry6</string>
    <string name="title_activity_learn_card1">LearnCard1Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="title_activity_learn_card4">LearnCard4Activity</string>
    <string name="learning">Learning</string>
    <string name="days_of_the_week">Days of the week</string>
    <string name="months">Months</string>
    <string name="spelling">Spelling</string>
    <string name="seasons">Seasons</string>
    <string name="multiplication">Multiplication</string>
    <string name="directions">Directions</string>
    <string name="clock">Clock</string>
    <string name="playing">Playing</string>
    <string name="find_my_yesterday">Find my yesterday</string>
    <string name="remember_numbers">Remember Numbers</string>
    <string name="matching">Matching</string>
    <string name="snake">Snake</string>
    <string name="remember_backward">Remember Backward</string>
    <string name="follow_the_ball">Follow the ball</string>
    <string name="sign_out">Sign Out</string>
    <string name="home">Home Page</string>
    <string name="learn">Learn</string>
    <string name="play">Play</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="dont_you_have_an_account">Dont you have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="change_the_language">Change to 🇹🇷</string>
    <string name="point_pink">30 point</string>
    <string name="point_orange">10 point</string>
    <string name="point_black">Game Over</string>
    <string name="btn_start">START</string>
    <string name="score">Score : %d</string>
    <string name="tap_to_start">Tap to Start</string>
    <string name="result_title">GAME OVER</string>
    <string name="result_score">%d</string>
    <string name="high_score">High Score : %d</string>
    <string name="btn_try_again">TRY AGAIN</string>
    <string name="Catchthemeats">Pacman</string>
    <string name="pacman_game">Pacman Game</string>
    <string name="analog_clock">ANALOG CLOCK</string>
    <string name="what_is_an_analog_clock">What is an analog clock?</string>
    <string name="hour_hand">Hour Hand</string>
    <string name="how_to_read_an_analog_clock">How to read an analog clock</string>
    <string name="one_example">One Example</string>
    <string name="digital_clock">DIGITAL CLOCK</string>
    <string name="reading_the_first_number_determining_the_hour">Reading the first number determining the hour</string>
    <string name="reading_the_second_number_for_minutes">Reading the second number for minutes</string>
    <string name="put_these_together_and_get_the_time">Put these together and get the time</string>
    <string name="determine_if_it_is_am_or_pm">Determine if it is AM or PM</string>
    <string name="main_directions">MAIN DIRECTIONS</string>
    <string name="let_s_see_what_cats_doing">Let\'s see what cats doing</string>
    <string name="ballscore">Score:</string>
    <string name="multiplication_game">Multiplication Game</string>
    <string name="enter_your_answer">Enter your answer</string>
    <string name="check">Check</string>
    <string name="enter_number">Enter number</string>
    <string name="start">Start</string>
    <string name="scoresnake">score</string>
    <string name="game_over_play_again">Game Over ! Play Again</string>
    <string name="new_game">New Game</string>
    <string name="resume_game">Resume Game</string>
    <string name="up">UP</string>
    <string name="left">LEFT</string>
    <string name="pause">PAUSE</string>
    <string name="right">RIGHT</string>
    <string name="down">DOWN</string>
    <string name="talk_with_chatgpt">TALK WITH CHATGPT</string>
</resources>