<?xml version="1.0" encoding="UTF-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/analog_clock"
            android:textColor="@color/white"
            android:textSize="42sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="18dp"
            android:text="@string/what_is_an_analog_clock"
            android:textSize="24sp"
            android:textStyle="italic"
            android:textColor="@color/white">
        </TextView>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/saat1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="18dp"
            android:text="@string/hour_hand"
            android:textSize="24sp"
            android:textStyle="italic"
            android:textColor="@color/white">
        </TextView>
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/saat2" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="18dp"
            android:text="@string/how_to_read_an_analog_clock"
            android:textSize="24sp"
            android:textStyle="italic"
            android:textColor="@color/white">
        </TextView>
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/saat3" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/saat4" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="18dp"
            android:text="@string/one_example"
            android:textSize="24sp"
            android:textStyle="italic"
            android:textColor="@color/white">
        </TextView>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/saat5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/digital_clock"
            android:textSize="42sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="14dp"
            android:text="@string/reading_the_first_number_determining_the_hour"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@color/white">
        </TextView>
        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/d1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="14dp"
            android:text="@string/reading_the_second_number_for_minutes"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@color/white">
        </TextView>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/d2" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="14dp"
            android:text="@string/put_these_together_and_get_the_time"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@color/white">
        </TextView>
        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/d3" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="14dp"
            android:text="@string/determine_if_it_is_am_or_pm"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@color/white">
        </TextView>
        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/d4" />


    </LinearLayout>

</ScrollView>
