<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pacman_game"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="32sp"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp">

        <TableRow
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/star"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_pink"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:paddingLeft="10dp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />
        </TableRow>

        <TableRow
            android:gravity="center_vertical"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/heart"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_orange"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:paddingLeft="10dp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />
        </TableRow>

        <TableRow
            android:gravity="center_vertical"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/flame"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_black"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:paddingLeft="10dp"
                tools:ignore="RtlHardcoded,RtlSymmetry"/>
        </TableRow>

    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_start"
        android:layout_marginTop="60dp"
        android:textSize="24sp"
        android:onClick="startGame"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"/>
</LinearLayout>