<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/backgroundgradient"
    tools:context=".PlayMultiplicationCardActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiplication_game"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="16dp"
        android:layout_marginBottom="32dp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="48dp"
        android:src="@drawable/calculator"/>


    <Button
        android:id="@+id/multiplication_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/multiplication"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/problem_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:enabled="false"
        android:minWidth="48dp"
        android:padding="16dp"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/result_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/enter_your_answer"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginBottom="24dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="16dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/check"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:backgroundTint="@color/white"
        android:padding="16dp"
        android:onClick="checkResult" />

</LinearLayout>